--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <div class="conteiner flexbox">
         <nav class="header-nav">
           <a class="company-logo" href="./index.html"
-            ><span class="logo-web">Web</span>Studio
-          </a>
+            ><span class="logo-web">Web</span>Studio</a
+          >
 
           <ul class="nav-link-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html"> Студия</a>
+              <a class="nav-link" href="./index.html">Студия</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./portfolio.html"> Портфолио</a>
+              <a class="nav-link" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Контакты</a></li>
           </ul>
@@ -60,10 +60,8 @@
 
     <main class="main-content">
       <section class="section-hero">
-        <!-- <div class="conteiner"> -->
         <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="btn">Заказать услугу</button>
-        <!-- </div> -->
       </section>
 
       <!--Studio strong sides-->
@@ -132,6 +130,7 @@
                 width="370"
                 alt="услуги-html/css"
               />
+              <h3 class="doing-title">Десктопные приложения</h3>
             </li>
             <li class="doing-item">
               <img
@@ -139,13 +138,19 @@
                 width="370"
                 alt="услуги-програмирования"
               />
+              <h3 class="doing-title">Мобильные приложения</h3>
             </li>
             <li class="doing-item">
-              <img
-                src="./img/img-studio/design.jpg"
-                width="370"
-                alt="услуги-дизайна"
-              />
+              <div class="">
+                <img
+                  src="./img/img-studio/design.jpg"
+                  width="370"
+                  alt="услуги-дизайна"
+                />
+                <h3 class="doing-title">Дизайнерские решения</h3>
+              </div>
+
+              <p>ksksfbkjvbdkfjgndjbndlfbnlckvnblcfgmbn</p>
             </li>
           </ul>
         </div>
