--- a/portfolio.html
+++ b/portfolio.html
@@ -202,12 +202,13 @@
     </main>
     <footer class="footer">
       <div class="conteiner">
+        <div class="footer-contacts">
       <a class="company-logo logo-footer" href="./index.html">
         <span class="logo-web">Web</span
         ><span class="logo-studio-footer">Studio</span>
       </a>
-      <div class="footer-contacts">
-      <ul>
+      
+      <ul class="footer-list">
         <li class="adress-info-footer">г. Киев, пр-т Леси Украинки, 26</li>
         <li class="contacts-info"> <a class="contacts-footer" href="mailto:info@devstudio.com">
             info@devstudio.com</a></li>
