--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <ul class="nav-link-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Студия</a>
+              <a class="nav-link active-status" href="./index.html">Студия</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./portfolio.html">Портфолио</a>
@@ -61,7 +61,9 @@
     <main class="main-content">
       <section class="section-hero">
         <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="btn">Заказать услугу</button>
+        <button type="button" class="btn" data-modal-open>
+          Заказать услугу
+        </button>
       </section>
 
       <!--Studio strong sides-->
@@ -125,23 +127,27 @@
           <h2 class="title-company-features">Чем мы занимаемся</h2>
           <ul class="doing-list">
             <li class="doing-item">
-              <img
-                src="./img/img-studio/coding.jpg"
-                width="370"
-                alt="услуги-html/css"
-              />
-              <h3 class="doing-title">Десктопные приложения</h3>
+              <div class="doingbox">
+                <img
+                  src="./img/img-studio/coding.jpg"
+                  width="370"
+                  alt="услуги-html/css"
+                />
+                <h3 class="doing-title">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="doing-item">
-              <img
-                src="./img/img-studio/programming.jpg"
-                width="370"
-                alt="услуги-програмирования"
-              />
-              <h3 class="doing-title">Мобильные приложения</h3>
+              <div class="doingbox">
+                <img
+                  src="./img/img-studio/programming.jpg"
+                  width="370"
+                  alt="услуги-програмирования"
+                />
+                <h3 class="doing-title">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="doing-item">
-              <div class="">
+              <div class="doingbox">
                 <img
                   src="./img/img-studio/design.jpg"
                   width="370"
@@ -149,8 +155,6 @@
                 />
                 <h3 class="doing-title">Дизайнерские решения</h3>
               </div>
-
-              <p>ksksfbkjvbdkfjgndjbndlfbnlckvnblcfgmbn</p>
             </li>
           </ul>
         </div>
@@ -456,5 +460,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="closebtn" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./img/sprite.svg#icon-close-black-18dp"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
