--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,9 @@
 
         <ul class="nav-link-list">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html"> Студия</a>
+            <a class="nav-link " href="./index.html"> Студия</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="./portfolio.html"> Портфолио</a></li>
+          <li class="nav-item"><a class="nav-link active-status" href="./portfolio.html"> Портфолио</a></li>
           <li class="nav-item"><a class="nav-link" href=""> Контакты</a></li>
         </ul>
       </nav>
@@ -72,11 +72,17 @@
         <ul class="gallery-list">
           <li class="gallery-item">
             <a class="project-link" href="">
+              <div class="project-card">
               <img
                 src="./img/porfolio-img/technokriak.jpg"
                 width="370" height="294"
                 alt="Технокряк"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Технокряк</h2>
                 <p class="gallery-info">Веб-сайт</p>
