--- a/portfolio.html
+++ b/portfolio.html
@@ -92,11 +92,18 @@
 
           <li class="gallery-item">
             <a class="project-link" href=""
-              ><img
+              >
+              <div class="project-card">
+                <img
                 src="./img/porfolio-img/poster-NO.jpg"
                 width="370" height="294"
                 alt=" Постер New Orlean vs Golden Star"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
                 <p class="gallery-info"> Дизайн</p>
@@ -106,11 +113,18 @@
 
           <li class="gallery-item">
             <a class="project-link" href=""
-              ><img
+              >
+              <div class="project-card">
+                <img
                 src="./img/porfolio-img/restaurant.jpg"
                 width="370" height="294"
                 alt="Ресторан Seafood"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Ресторан Seafood</h2>
                 <p class="gallery-info">Приложение</p>
@@ -120,11 +134,18 @@
 
           <li class="gallery-item">
             <a class="project-link" href=""
-              ><img
+              >
+              <div class="project-card">
+                <img
                 src="./img/porfolio-img/project-prime.jpg"
                 width="370" height="294"
                 alt="Проект Prime"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Проект Prime</h2>
                 <p class="gallery-info">Маркетинг</p>
@@ -134,11 +155,18 @@
 
           <li class="gallery-item">
             <a class="project-link" href=""
-              ><img
+              >
+              <div class="project-card">
+                <img
                 src="./img/porfolio-img/project-boxes.jpg"
                 width="370" height="294"
                 alt="Проект Boxes"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Проект Boxes</h2>
                 <p class="gallery-info">Приложение</p>
@@ -148,11 +176,18 @@
 
           <li class="gallery-item">
             <a class="project-link" href=""
-              ><img
+              >
+              <div class="project-card">
+                <img
                 src="./img/porfolio-img/inspiration.jpg"
                 width="370" height="294"
                 alt="Inspiration has no Borders"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Inspiration has no Borders</h2>
                 <p class="gallery-info">Веб-сайт</p>
@@ -162,11 +197,17 @@
 
           <li class="gallery-item"> 
             <a class="project-link" href="">
+              <div class="project-card">
               <img
                 src="./img/porfolio-img/edition.jpg"
                 width="370" height="294"
                 alt="Издание Limited Edition"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
               <div class="project-info">
                 <h2 class="gallery-title">Издание Limited Edition</h2>
                 <p class="gallery-info">Дизайн</p>
@@ -176,11 +217,17 @@
 
           <li class="gallery-item">
             <a class="project-link" href="">
+              <div class="project-card">
               <img
                 src="./img/porfolio-img/project-lab.jpg"
                 width="370" height="294"
                 alt="Проект LAB"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
                <div class="project-info">
                 <h2 class="gallery-title">Проект LAB</h2>
                 <p class="gallery-info">Маркетинг</p>
@@ -189,12 +236,18 @@
           </li>
 
           <li class="gallery-item">
-            <a class="project-link" href=""
-              ><img
+            <a class="project-link" href="">
+              <div class="project-card">
+              <img
                 src="./img/porfolio-img/growing-business.jpg"
                 width="370" height="294"
                 alt="Growing Business"
               />
+              <div class="card-description">
+              <p class="description">Технокряк это современная площадка распространения коронавируса.
+                 Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
+              </div>
                <div class="project-info">
                 <h2 class="gallery-title">Growing Business</h2>
                 <p class="gallery-info">Приложение</p>
