--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                   width="370"
                   alt="услуги-html/css"
                 />
-                <h3 class="doing-title">Десктопные приложения</h3>
+                <div class="doingbox-title">
+                  <h3 class="doing-title">Десктопные приложения</h3>
+                </div>
               </div>
             </li>
             <li class="doing-item">
@@ -143,7 +145,9 @@
                   width="370"
                   alt="услуги-програмирования"
                 />
-                <h3 class="doing-title">Мобильные приложения</h3>
+                <div class="doingbox-title">
+                  <h3 class="doing-title">Мобильные приложения</h3>
+                </div>
               </div>
             </li>
             <li class="doing-item">
@@ -153,7 +157,9 @@
                   width="370"
                   alt="услуги-дизайна"
                 />
-                <h3 class="doing-title">Дизайнерские решения</h3>
+                <div class="doingbox-title">
+                  <h3 class="doing-title">Дизайнерские решения</h3>
+                </div>
               </div>
             </li>
           </ul>
